--- a/index.html
+++ b/index.html
@@ -5,6 +5,20 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Alien Wars Website</title>
     <link rel="stylesheet" href="styles.css">
+    <style>
+        /* Make sure the video takes up the full width and height of its container */
+        #introduction .video-container {
+            position: relative;
+            width: 100%;
+            height: 100%;
+        }
+
+        #introduction video {
+            width: 100%;
+            height: 100%;
+            object-fit: cover; /* Ensures the video covers the entire section */
+        }
+    </style>
 </head>
 <body>
     <!-- Game Project Section -->
@@ -34,6 +48,51 @@
             </div>
         </div>
     </section>
+
+    <!-- Main Content -->
+    <main>
+        <section id="home">
+            <div class="container">
+                <h2 class="fade-text">About My Work</h2>
+                <p class="fade-text">Alien Wars is a game coded in Python. The game allows players to maneuver a spaceship as they defend Earth from invaders...</p>
+            </div>
+        </section>
+
+        <section id="about">
+            <div class="container">
+                <h2 class="fade-text">About Me</h2>
+                <p class="fade-text">I like coding new things and also like to showcase them to grow and get better. Recently, I have started a YouTube channel with my friends...</p>
+            </div>
+        </section>
+
+        <section id="services">
+            <div class="container">
+                <h2 class="fade-text">My Services</h2>
+                <ul>
+                    <li class="fade-text">Game Development</li>
+                    <li class="fade-text">Game Design</li>
+                    <li class="fade-text">Marketing</li>
+                    <li class="fade-text">Business</li>
+                </ul>
+            </div>
+        </section>
+
+        <section id="contact">
+            <div class="container">
+                <h2 class="fade-text">Contact Me</h2>
+                <p class="fade-text">If you are interested in my services, feel free to contact me. I have plenty of accounts. If I might not answer, I'm busy.</p>
+                <a href="mailto:youremail@example.com" class="fade-text">Email me</a>
+                <a href="mailto:youremail@example.com" class="fade-text">Discord</a>
+            </div>
+        </section>
+    </main>
+
+    <!-- Footer -->
+    <footer>
+        <div class="container">
+            <p class="fade-text">&copy; 2024 Alien Wars Website by Lazy. All rights reserved.</p>
+        </div>
+    </footer>
 
     <script src="script.js"></script>
 
