--- a/index.html
+++ b/index.html
@@ -6,7 +6,71 @@
     <title>Alien Wars Website</title>
     <link rel="stylesheet" href="styles.css">
     <style>
-        /* Make sure the video takes up the full width and height of its container */
+        /* Layout Styles */
+        .container {
+            width: 90%;
+            margin: 0 auto;
+        }
+
+        section {
+            padding: 50px 0;
+        }
+
+        /* About My Work Section */
+        #about-my-work {
+            display: flex;
+            flex-direction: row;
+            align-items: center;
+            justify-content: space-between;
+        }
+
+        #about-my-work .text {
+            width: 60%;
+        }
+
+        #about-my-work .image {
+            width: 35%;
+        }
+
+        /* About Me Section */
+        #about-me {
+            display: flex;
+            flex-direction: row-reverse;
+            align-items: center;
+            justify-content: space-between;
+        }
+
+        #about-me .text {
+            width: 60%;
+        }
+
+        #about-me .image {
+            width: 35%;
+        }
+
+        /* My Services Section */
+        #my-services {
+            display: flex;
+            flex-direction: row;
+            align-items: center;
+            justify-content: space-between;
+        }
+
+        #my-services .text {
+            width: 60%;
+        }
+
+        #my-services .image {
+            width: 35%;
+        }
+
+        /* Contact Me Section */
+        #contact {
+            font-size: 0.9rem;
+            text-align: center;
+        }
+
+        /* Make video fit the entire introduction section */
         #introduction .video-container {
             position: relative;
             width: 100%;
@@ -16,7 +80,7 @@
         #introduction video {
             width: 100%;
             height: 100%;
-            object-fit: cover; /* Ensures the video covers the entire section */
+            object-fit: cover;
         }
     </style>
 </head>
@@ -49,43 +113,59 @@
         </div>
     </section>
 
-    <!-- Main Content -->
-    <main>
-        <section id="home">
-            <div class="container">
-                <h2 class="fade-text">About My Work</h2>
-                <p class="fade-text">Alien Wars is a game coded in Python. The game allows players to maneuver a spaceship as they defend Earth from invaders...</p>
+    <!-- About My Work Section -->
+    <section id="about-my-work">
+        <div class="container">
+            <div class="text fade-text">
+                <h2>About My Work</h2>
+                <p>Alien Wars is a game coded in Python. The game allows players to maneuver a spaceship as they defend Earth from invaders. It's a project that combines coding skills, game design, and creativity. I developed this game as a fun way to challenge players and develop my programming knowledge.</p>
             </div>
-        </section>
-
-        <section id="about">
-            <div class="container">
-                <h2 class="fade-text">About Me</h2>
-                <p class="fade-text">I like coding new things and also like to showcase them to grow and get better. Recently, I have started a YouTube channel with my friends...</p>
+            <div class="image fade-text">
+                <img src="game-work-image.jpg" alt="About my work image">
             </div>
-        </section>
+        </div>
+    </section>
 
-        <section id="services">
-            <div class="container">
-                <h2 class="fade-text">My Services</h2>
+    <!-- About Me Section -->
+    <section id="about-me">
+        <div class="container">
+            <div class="text fade-text">
+                <h2>About Me</h2>
+                <p>I enjoy coding new things and showcasing them to improve my skills. Recently, I started a YouTube channel with my friends, where we share our projects and adventures. I am passionate about game development, coding, and creating engaging content for others to enjoy.</p>
+            </div>
+            <div class="image fade-text">
+                <img src="about-me-image.jpg" alt="About me image">
+            </div>
+        </div>
+    </section>
+
+    <!-- My Services Section -->
+    <section id="my-services">
+        <div class="container">
+            <div class="text fade-text">
+                <h2>My Services</h2>
                 <ul>
-                    <li class="fade-text">Game Development</li>
-                    <li class="fade-text">Game Design</li>
-                    <li class="fade-text">Marketing</li>
-                    <li class="fade-text">Business</li>
+                    <li>Game Development</li>
+                    <li>Game Design</li>
+                    <li>Marketing</li>
+                    <li>Business Strategy</li>
                 </ul>
             </div>
-        </section>
-
-        <section id="contact">
-            <div class="container">
-                <h2 class="fade-text">Contact Me</h2>
-                <p class="fade-text">If you are interested in my services, feel free to contact me. I have plenty of accounts. If I might not answer, I'm busy.</p>
-                <a href="mailto:youremail@example.com" class="fade-text">Email me</a>
-                <a href="mailto:youremail@example.com" class="fade-text">Discord</a>
+            <div class="image fade-text">
+                <img src="services-image.jpg" alt="My services image">
             </div>
-        </section>
-    </main>
+        </div>
+    </section>
+
+    <!-- Contact Me Section -->
+    <section id="contact">
+        <div class="container">
+            <h2 class="fade-text">Contact Me</h2>
+            <p class="fade-text">If you're interested in my services or want to learn more, feel free to contact me. I am available through email or Discord. If I don’t respond immediately, I might be busy, but I will get back to you as soon as possible!</p>
+            <a href="mailto:youremail@example.com" class="fade-text">Email me</a>
+            <a href="mailto:youremail@example.com" class="fade-text">Discord</a>
+        </div>
+    </section>
 
     <!-- Footer -->
     <footer>
