--- a/index.html
+++ b/index.html
@@ -87,17 +87,20 @@
 <body>
     <!-- Game Project Section -->
     <section id="game-project">
-        <div class="container">
-            <h2 class="fade-text">Alien Wars - The Game</h2>
-            <div class="game-info">
-                <img src="Asteroid.png" alt="Alien Wars Game Animation" class="game-image">
-                <div class="game-description">
-                    <p class="fade-text">Alien Wars is an action-packed game where you control a spaceship to defend Earth from alien invaders. This game was coded in Python. The goal is to protect the planet by maintaining a high streak and earning the best score possible. Join the fight now!</p>
-                    <a href="https://drive.google.com/uc?export=download&id=19gpn_r_dLv5mRgC11pW1xqG-x-1gxzwK" class="download-btn fade-text" target="_blank">Download Alien Wars</a>
-                </div>
+    <div class="container">
+        <h2 class="fade-text">Alien Wars - The Game</h2>
+        <div class="game-info">
+            <img src="Asteroid.png" alt="Alien Wars Game Animation" class="game-image">
+            <div class="game-description">
+                <p class="fade-text">
+                    Alien Wars is an action-packed game where you control a spaceship to defend Earth from alien invaders. This game was coded in Python. The goal is to protect the planet by maintaining a high streak and earning the best score possible. Join the fight now!
+                </p>
+                <a href="https://drive.google.com/uc?export=download&id=19gpn_r_dLv5mRgC11pW1xqG-x-1gxzwK" class="download-btn fade-text" target="_blank">Download Alien Wars</a>
             </div>
         </div>
-    </section>
+    </div>
+</section>
+
 
     <!-- Introduction Section -->
     <section id="introduction">
