--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
     <!-- Game Project Section -->
     <section id="game-project">
     <div class="container">
-        <h2 class="fade-text">Alien Wars - The Game</h2>
+        <h2>Alien Wars - The Game</h2>
         <div class="game-info">
             <img src="Asteroid.png" alt="Alien Wars Game Animation" class="game-image">
             <div class="game-description">
@@ -107,7 +107,7 @@
         <div class="container">
             <h2 class="fade-text">Introduction</h2>
             <p class="fade-text">Learn more about Alien Wars through this video introduction. It covers gameplay mechanics, story, and what makes it unique!</p>
-            <div class="video-container fade-text">
+            <div class="video-container">
                 <video controls>
                     <source src="introduction.mp4" type="video/mp4">
                     Your browser does not support the video tag.
