--- a/index.html
+++ b/index.html
@@ -105,8 +105,8 @@
     <!-- Introduction Section -->
     <section id="introduction">
         <div class="container">
-            <h2 class="fade-text">Introduction</h2>
-            <p class="fade-text">Learn more about Alien Wars through this video introduction. It covers gameplay mechanics, story, and what makes it unique!</p>
+            <h2>Introduction</h2>
+            <p>Learn more about Alien Wars through this video introduction. It covers gameplay mechanics, story, and what makes it unique!</p>
             <div class="video-container">
                 <video controls>
                     <source src="introduction.mp4" type="video/mp4">
