--- a/index.html
+++ b/index.html
@@ -107,12 +107,16 @@
         <div class="container">
             <h2>Introduction</h2>
             <p>Learn more about Alien Wars through this video introduction. It covers gameplay mechanics, story, and what makes it unique!</p>
-            <div class="video-container">
-                <video controls>
-                    <source src="introduction.mp4" type="video/mp4">
-                    Your browser does not support the video tag.
-                </video>
-            </div>
+            <div class="video-container fade-text">
+    <iframe 
+        src="https://drive.google.com/file/d/1H4GVN2G7b_uCzQW6EiDXYop/preview" 
+        width="100%" 
+        height="480" 
+        allow="autoplay; encrypted-media" 
+        allowfullscreen>
+    </iframe>
+</div>
+
         </div>
     </section>
 
