--- a/index.html
+++ b/index.html
@@ -107,9 +107,9 @@
         <div class="container">
             <h2>Introduction</h2>
             <p>Learn more about Alien Wars through this video introduction. It covers gameplay mechanics, story, and what makes it unique!</p>
-            <div class="video-container fade-text">
+            <div class="video-container">
     <iframe 
-        src="https://drive.google.com/file/d/19gpn_r_dLv5mRgC11pW1xqG-x-1gxzwK/preview" 
+        src="https://drive.google.com/file/d/1gDgxKjQJAww5nbsakAAD3IzyvVCIIpqD/preview" 
         width="100%" 
         height="480" 
         allow="autoplay; encrypted-media" 
