--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
             <p>Alien Wars is a game coded in Python. The game allows players to maneuver a spaceship as they defend Earth from invaders. It's a project that combines coding skills, game design, and creativity. I developed this game as a fun way to challenge players and develop my programming knowledge.</p>
         </div>
         <div class="image fade-text">
-            <img src="Asteroid.png" alt="About my work image">
+            <img src="PythonCode.png" alt="About my work image">
         </div>
     </div>
 </section>
