--- a/index.html
+++ b/index.html
@@ -121,6 +121,7 @@
     </section>
 
     <!-- About My Work Section -->
+<!-- About My Work Section -->
 <section id="about-my-work">
     <div class="container">
         <div class="text fade-text">
@@ -128,10 +129,11 @@
             <p>Alien Wars is a game coded in Python. The game allows players to maneuver a spaceship as they defend Earth from invaders. It's a project that combines coding skills, game design, and creativity. I developed this game as a fun way to challenge players and develop my programming knowledge.</p>
         </div>
         <div class="image fade-text">
-            <img src="PythonCode.png" alt="About my work image">
+            <img src="Asteroid.png" alt="About my work image">
         </div>
     </div>
 </section>
+
 
 
     <!-- About Me Section -->
