--- a/index.html
+++ b/index.html
@@ -17,26 +17,33 @@
         }
 
         #about-my-work {
-    display: flex; /* Use flexbox to align items horizontally */
-    align-items: center; /* Vertically center the content */
-    justify-content: space-between; /* Ensure space between text and image */
-    gap: 20px; /* Space between text and image */
-}
+            display: flex; /* Use flexbox to align items horizontally */
+            align-items: center; /* Vertically center the content */
+            justify-content: space-between; /* Ensure space between text and image */
+            gap: 20px; /* Space between text and image */
+        }
 
-#about-my-work .text {
-    width: 60%; /* Text will take up 60% of the container */
-    text-align: left; /* Align text to the left */
-}
+        #about-my-work {
+            display: flex; /* Use flexbox to align items horizontally */
+            align-items: center; /* Vertically center the content */
+            justify-content: space-between; /* Ensure space between text and image */
+            gap: 20px; /* Space between text and image */
+        }
 
-#about-my-work .image {
-    width: 35%; /* Image will take up 35% of the container */
-}
+        #about-my-work .text {
+            width: 60%; /* Text will take up 60% of the container */
+            text-align: left; /* Align text to the left */
+        }
 
-#about-my-work .image img {
-    width: 100%; /* Make sure the image fills the container */
-    height: auto; /* Maintain aspect ratio */
-    object-fit: contain; /* Ensure the image is not distorted */
-}
+        #about-my-work .image {
+            width: 35%; /* Image will take up 35% of the container */
+        }
+
+        #about-my-work .image img {
+            width: 100%; /* Make sure the image fills the container */
+            height: auto; /* Maintain aspect ratio */
+            object-fit: contain; /* Ensure the image is not distorted */
+        }
 
         /* About Me Section */
         #about-me {
