--- a/index.html
+++ b/index.html
@@ -62,20 +62,28 @@
         }
 
         /* My Services Section */
-        #my-services {
-            display: flex;
-            flex-direction: row;
-            align-items: center;
-            justify-content: space-between;
-        }
+#my-services {
+    display: flex; /* Use flexbox to align items horizontally */
+    align-items: center; /* Vertically center the content */
+    justify-content: space-between; /* Ensure space between text and image */
+    gap: 20px; /* Add some space between the text and image */
+}
 
-        #my-services .text {
-            width: 60%;
-        }
+#my-services .text {
+    width: 60%; /* Text takes up 60% of the container */
+    text-align: left; /* Align text to the left */
+}
 
-        #my-services .image {
-            width: 35%;
-        }
+#my-services .image {
+    width: 35%; /* Image takes up 35% of the container */
+}
+
+#my-services .image img {
+    width: 100%; /* Make the image fill the container */
+    height: auto; /* Maintain aspect ratio */
+    object-fit: contain; /* Ensure the image is not distorted */
+}
+
 
         /* Contact Me Section */
         #contact {
@@ -176,7 +184,7 @@
             </ul>
         </div>
         <div class="image fade-text">
-            <img src="services-image.jpg" alt="My services image">
+            <img src="FunnyImage.jpeg" alt="My services image">
         </div>
     </div>
 </section>
