--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
                 <p>I enjoy coding new things and showcasing them to improve my skills. Recently, I started a YouTube channel with my friends, where we share our projects and adventures. I am passionate about game development, coding, and creating engaging content for others to enjoy.</p>
             </div>
             <div class="image fade-text">
-                <img src="about-me-image.jpg" alt="About me image">
+                <img src="LightBulb.jpeg" alt="About me image">
             </div>
         </div>
     </section>
