--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@
             </ul>
         </div>
         <div class="image fade-text">
-            <img src="FunnyImage.jpeg" alt="My services image">
+            <img src="FunnyImajpeg" alt="My services image">
         </div>
     </div>
 </section>
