--- a/index.html
+++ b/index.html
@@ -46,20 +46,30 @@
         }
 
         /* About Me Section */
-        #about-me {
-            display: flex;
-            flex-direction: row-reverse;
-            align-items: center;
-            justify-content: space-between;
-        }
+        /* About Me Section */
+#about-me {
+    display: flex; /* Use flexbox to align the text and image side by side */
+    flex-direction: row-reverse; /* This places the image on the right and the text on the left */
+    align-items: center; /* Vertically center the content */
+    justify-content: space-between; /* Ensures space between text and image */
+    gap: 20px; /* Add space between the text and the image */
+}
 
-        #about-me .text {
-            width: 60%;
-        }
+#about-me .text {
+    width: 60%; /* Text takes up 60% of the container */
+    text-align: right; /* Align text to the right */
+}
 
-        #about-me .image {
-            width: 35%;
-        }
+#about-me .image {
+    width: 35%; /* Image takes up 35% of the container */
+}
+
+#about-me .image img {
+    width: 100%; /* Make the image fill the container */
+    height: auto; /* Maintain aspect ratio */
+    object-fit: contain; /* Ensure the image fits without distortion */
+}
+
 
         /* My Services Section */
 #my-services {
