--- a/index.html
+++ b/index.html
@@ -172,16 +172,17 @@
 
     <!-- About Me Section -->
     <section id="about-me">
-        <div class="container">
-            <div class="text fade-text">
-                <h2>About Me</h2>
-                <p>I enjoy coding new things and showcasing them to improve my skills. Recently, I started a YouTube channel with my friends, where we share our projects and adventures. I am passionate about game development, coding, and creating engaging content for others to enjoy.</p>
-            </div>
-            <div class="image fade-text">
-                <img src="LightBulb.jpeg" alt="About me image">
-            </div>
+    <div class="container">
+        <div class="text fade-text">
+            <h2>About Me</h2>
+            <p>My name is Amir. I'm passionate about coding and creating projects that challenge my skills. I enjoy learning new technologies and applying them in creative ways. In my free time, I love playing games, drawing, and exploring new ideas that can turn into exciting projects.</p>
         </div>
-    </section>
+        <div class="image fade-text">
+            <img src="FunnyImage.jpeg" alt="About Me image">
+        </div>
+    </div>
+</section>
+
 
     <!-- My Services Section -->
     <section id="my-services">
