--- a/index.html
+++ b/index.html
@@ -173,15 +173,16 @@
     <!-- About Me Section -->
     <section id="about-me">
     <div class="container">
+        <div class="image fade-text">
+            <img src="AmirProfile.png" alt="About Me image">
+        </div>
         <div class="text fade-text">
             <h2>About Me</h2>
             <p>My name is Amir. I'm passionate about coding and creating projects that challenge my skills. I enjoy learning new technologies and applying them in creative ways. In my free time, I love playing games, drawing, and exploring new ideas that can turn into exciting projects.</p>
         </div>
-        <div class="image fade-text">
-            <img src="FunnyImage.jpeg" alt="About Me image">
-        </div>
     </div>
 </section>
+
 
 
     <!-- My Services Section -->
