--- a/index.html
+++ b/index.html
@@ -153,14 +153,14 @@
 
 <!-- About My Work Section -->
 
-<section id="about-my-work">
+<section id="about-work">
     <div class="container">
         <div class="text fade-text">
-            <h2>About My Work</h2>
-            <p>Alien Wars is a game coded in Python. The game allows players to maneuver a spaceship as they defend Earth from invaders. It's a project that combines coding skills, game design, and creativity. I developed this game as a fun way to challenge players and develop my programming knowledge.</p>
+            <h2>About Work</h2>
+            <p>Information about my work and experience. I am passionate about coding and developing projects that help me grow my skills.</p>
         </div>
         <div class="image fade-text">
-            <img src="PythonCode.png" alt="About my work image">
+            <img src="LightBulb.jpeg" alt="About Work image">
         </div>
     </div>
 </section>
@@ -174,11 +174,11 @@
     <section id="about-me">
     <div class="container">
         <div class="image fade-text">
-            <img src="AmirProfile.png" alt="About Me image">
+            <img src="FunnyImage.jpeg" alt="About Me image">
         </div>
         <div class="text fade-text">
             <h2>About Me</h2>
-            <p>My name is Amir. I'm passionate about coding and creating projects that challenge my skills. I enjoy learning new technologies and applying them in creative ways. In my free time, I love playing games, drawing, and exploring new ideas that can turn into exciting projects.</p>
+            <p>My name is Amir. I love coding, gaming, and creating projects that challenge my skills and creativity. In my free time, I enjoy drawing and exploring new ideas.</p>
         </div>
     </div>
 </section>
