--- a/index.html
+++ b/index.html
@@ -153,6 +153,7 @@
 
 <!-- About My Work Section -->
 
+<!-- About Work Section -->
 <section id="about-work">
     <div class="container">
         <div class="text fade-text">
@@ -165,23 +166,19 @@
     </div>
 </section>
 
-
-
-
-
-
-    <!-- About Me Section -->
-    <section id="about-me">
+<!-- About Me Section -->
+<section id="about-me">
     <div class="container">
         <div class="image fade-text">
             <img src="FunnyImage.jpeg" alt="About Me image">
         </div>
         <div class="text fade-text">
             <h2>About Me</h2>
-            <p>My name is Amir. I love coding, gaming, and creating projects that challenge my skills and creativity. In my free time, I enjoy drawing and exploring new ideas.</p>
+            <p>My name is A. I love coding, gaming, and creating projects that challenge my skills and creativity. In my free time, I enjoy drawing and exploring new ideas.</p>
         </div>
     </div>
 </section>
+
 
 
 
