--- a/index.html
+++ b/index.html
@@ -151,39 +151,35 @@
         </div>
     </section>
 
+<!-- About My Work Section -->
 
-<section id="about-work">
+<section id="about-my-work">
     <div class="container">
         <div class="text fade-text">
-            <h2>About Work</h2>
-            <p>Information about my work and experience. I am passionate about coding and developing projects that help me grow my skills.</p>
+            <h2>About My Work</h2>
+            <p>Alien Wars is a game coded in Python. The game allows players to maneuver a spaceship as they defend Earth from invaders. It's a project that combines coding skills, game design, and creativity. I developed this game as a fun way to challenge players and develop my programming knowledge.</p>
         </div>
         <div class="image fade-text">
-            <img src="LightBulb.jpeg" alt="About Work image">
+            <img src="PythonCode.png" alt="About my work image">
         </div>
     </div>
 </section>
-
-
 
 
 
 
     <!-- About Me Section -->
     <section id="about-me">
-    <div class="container">
-        <div class="image fade-text">
-            <img src="FunnyImage.jpeg" alt="About Me image">
+        <div class="container">
+            <div class="text fade-text">
+                <h2>About Me</h2>
+                <p>I enjoy coding new things and showcasing them to improve my skills. Recently, I started a YouTube channel with my friends, where we share our projects and adventures. I am passionate about game development, coding, and creating engaging content for others to enjoy.</p>
+            </div>
+            <div class="image fade-text">
+                <img src="LightBulb.jpeg" alt="About me image">
+            </div>
         </div>
-        <div class="text fade-text">
-            <h2>About Me</h2>
-            <p>My name is A. I love coding, gaming, and creating projects that challenge my skills and creativity. In my free time, I enjoy drawing and exploring new ideas.</p>
-        </div>
-    </div>
-</section>
-
-
-
+    </section>
 
     <!-- My Services Section -->
     <section id="my-services">
