--- a/index.html
+++ b/index.html
@@ -154,14 +154,12 @@
 <!-- About My Work Section -->
 
 <section id="about-my-work">
-    <div class="container">
-        <div class="text fade-text">
-            <h2>About My Work</h2>
-            <p>Alien Wars is a game coded in Python. The game allows players to maneuver a spaceship as they defend Earth from invaders. It's a project that combines coding skills, game design, and creativity. I developed this game as a fun way to challenge players and develop my programming knowledge.</p>
-        </div>
-        <div class="image fade-text">
-            <img src="PythonCode.png" alt="About my work image">
-        </div>
+    <div class="text">
+        <h2>About My Work</h2>
+        <p>Your text goes here...</p>
+    </div>
+    <div class="image">
+        <img src="LightBulb.jpeg" alt="Description of image">
     </div>
 </section>
 
