--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
         <p>Your text goes here...</p>
     </div>
     <div class="image">
-        <img src="LightBulb.jpeg" alt="Description of image">
+        <img src="your-image-url.jpg" alt="Description of image">
     </div>
 </section>
 
