--- a/index.html
+++ b/index.html
@@ -168,18 +168,17 @@
 
 
 
-    <!-- About Me Section -->
-    <section id="about-me">
-        <div class="container">
-            <div class="text fade-text">
-                <h2>About Me</h2>
-                <p>I enjoy coding new things and showcasing them to improve my skills. Recently, I started a YouTube channel with my friends, where we share our projects and adventures. I am passionate about game development, coding, and creating engaging content for others to enjoy.</p>
-            </div>
-            <div class="image fade-text">
-                <img src="LightBulb.jpeg" alt="About me image">
-            </div>
-        </div>
-    </section>
+   <section id="about-me" class="container">
+    <div class="text">
+        <h2>About Me</h2>
+        <p>
+            I am passionate about creating amazing web designs and user-friendly applications. My journey began with an interest in coding, and now I specialize in delivering high-quality projects tailored to client needs.
+        </p>
+    </div>
+    <div class="image">
+        <img src="your-image-path.jpg" alt="About Me Image">
+    </div>
+</section>
 
     <!-- My Services Section -->
     <section id="my-services">
